# mindflayer

./: .gitignore  Blog.md  Dockerfile  README.md  __init__.py  blog.md  client.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
client/: mindflayer_env.py
colab/: mindflayer_training_easy.ipynb  mindflayer_training_medium.ipynb
frontend/: index.html
server/: __init__.py  app.py  game_state.py  investigators.py  judge.py  mindflayer_environment.py  models.py  scenarios.py  server_models.py
tests/: test_episodes.py  test_rewards.py
training/: __init__.py  prompts.py  reward_combined.py  rewards.py  rewards_anti_hack.py  rollout.py  sft_warmup.py  sft_warmup_medium.py  train.py  train_medium.py
